# agentic-dsa-mentor

./: .gitignore  ARCHITECTURE.md  README.md  app.py  docker-compose.yml  pyproject.toml  users.db
knowledge/: patterns.md
scripts/: ingest_knowledge.py
src/agentic_dsa_mentor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dsa_mentor/: __init__.py  bootstrap.py
src/dsa_mentor/agents/: __init__.py  registry.py
src/dsa_mentor/agents/prompts/: hint.md  interview.md  pattern_mapper.md  review.md  tutor.md  visualizer.md
src/dsa_mentor/application/: orchestrator.py  ports.py  problem_resolver.py  routing.py
src/dsa_mentor/domain/: models.py
src/dsa_mentor/infrastructure/: config.py  db.py
src/dsa_mentor/infrastructure/problem_sources/: __init__.py  leetcode.py
src/dsa_mentor/infrastructure/retrieval/: __init__.py  qdrant_voyage.py
src/dsa_mentor/ui/: streamlit_app.py
tests/: test_leetcode_source.py  test_problem_resolver.py  test_routing.py
