[project]
name = "agentic-dsa-mentor"
version = "0.1.0"
description = "A multi-agent DSA mentor with automatic LeetCode problem resolution"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "langchain-core>=0.3,<1",
  "langchain-groq>=0.2,<1",
  "langgraph>=0.2,<1",
  "pydantic-settings>=2.5,<3",
  "qdrant-client>=1.12,<2",
  "streamlit>=1.40,<2",
  "voyageai>=0.3,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.8,<1"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
